# auto-clean-bot

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: checks.yml  release.yml
bot/: .env.example  Cargo.toml  Dockerfile
bot/entity/: Cargo.toml
bot/entity/src/entities/: clean_channel.rs  clean_message.rs  mod.rs  prelude.rs
bot/migration/: Cargo.toml
bot/migration/src/: lib.rs  m20250612_100503_create_clean_channel.rs  m20250612_100617_create_clean_message.rs
bot/src/: commands.rs  event.rs  main.rs
bot/src/db/: clean_channel.rs  mod.rs
