[package]
name = "auto-clean-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
dotenv = "0.15.0"
poise = "0.6.1"
serenity = "0.12.4"
tokio = { version = "1.47.1", features = ["full"] }
chrono = "0.4.42"
sea-orm = { version = "1.1.17", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
] }
entity = { path = "entity" }
migration = { path = "migration" }
tracing-subscriber = "0.3.20"
tracing = "0.1.41"
uuid = { version = "1.18.1", features = ["v4"] }

[[bin]]
name = "auto-clean-bot"
path = "src/main.rs"
