[package]
name = "auto-clean-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
dotenv = "0.15.0"
poise = "0.6.1"
serenity = "0.12.5"
tokio = { version = "1.49.0", features = ["full"] }
chrono = "0.4.43"
sea-orm = { version = "1.1.19", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
] }
entity = { path = "entity" }
migration = { path = "migration" }
tracing-subscriber = "0.3.22"
tracing = "0.1.44"
uuid = { version = "1.19.0", features = ["v4"] }

[[bin]]
name = "auto-clean-bot"
path = "src/main.rs"
