[package]
name = "auto-clean-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
dotenv = "0.15.0"
poise = "0.6.1"
serenity = "0.12.5"
tokio = { version = "1.51.0", features = ["full"] }
chrono = "0.4.44"
sea-orm = { version = "1.1.20", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
] }
entity = { path = "entity" }
migration = { path = "migration" }
tracing-subscriber = "0.3.23"
tracing = "0.1.44"
uuid = { version = "1.23.0", features = ["v4"] }

[[bin]]
name = "auto-clean-bot"
path = "src/main.rs"
